# BCI_Simulation

./: 1st_floor_L8.world  README.md
assets/backup/: README.md
sc_bringup/: CMakeLists.txt  package.xml
sc_bringup/launch/: gazebo.launch  minibot.launch
sc_bringup/src/: pyrealsense2.py  pyrealsense2.so.2.38.1
sc_bringup/urdf/: turtlebot3_manipulation_alpha.urdf.xacro  turtlebot3_waffle_for_open_manipulator_alpha.urdf.xacro  turtlebot3_waffle_gazebo.urdf.xacro
sc_gui/: CMakeLists.txt  package.xml
sc_interaction/: CMakeLists.txt  package.xml
sc_interaction/launch/: interaction_robot.launch  interaction_user.launch
sc_interaction/msg/: ObjectInfo.msg  ObjectInfos.msg
sc_interaction/src/: marker_detector.py  marker_tf_lis.cpp  motion_detector.py  object_deprojector.py  object_filter.py  object_tf_br.cpp  object_tf_lis.cpp  raw_info_pub.py  test.py  움직임판단.py
sc_sim/config/gazebo/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
sc_sim/config/map/: L8_first_2.yaml  L8_first_3.pgm  L8_first_3.yaml  L8_first_4.pgm  L8_first_4.yaml  L8_first_floor.yaml  L8_fourth_floor.yaml
